--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Bagelis'
-email: leppolis@gmail.com
+email: 
 description: >- # this means to ignore newlines until "baseurl:"
   
 baseurl: "/Bagelis" # the subpath of your site, e.g. /blog
