--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Bagelis' Bakery
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
   My recipes. Mainly breads and pizzas, but also other things that I need to remember
-baseurl: "/Bagelis" # the subpath of your site, e.g. /blog
-url: "https://leeppolis.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://5onionst.taxiguerrilla.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: simonelippolis
 
 theme: minima
