--- a/_config.yml
+++ b/_config.yml
@@ -47,3 +47,8 @@ theme: minima
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+labels: 
+    - Ricette
+    - Ingredienti
+    - Strumenti
