--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Bagelis' Bakery
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  My recipes. Mainly breads and pizzas, but also other things that I need to remember
+   Il mio personale libro di ricette
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://5onionst.taxiguerrilla.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: simonelippolis
@@ -48,7 +48,11 @@ theme: minima
 #   - vendor/gems/
 #   - vendor/ruby/
 
+# Custom properties
 labels: 
-    - Ricette
-    - Ingredienti
-    - Strumenti
+  - Ricette
+  - Ingredienti
+  - Strumenti
+
+keywords: >-
+  ricette, pane, pizza, ricette facili, ricette veloci
